--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8081
 
 spring:
+  application:
+    name: product-service
   datasource:
     url: jdbc:h2:mem:productdb
     driver-class-name: org.h2.Driver
